crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__armor_of_thorns_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "CreateDelayedTrigger",
          "condition": {
            "type": "AtNextPhase",
            "phase": "Cleanup"
          },
          "effect": {
            "kind": "Spell",
            "effect": {
              "type": "Sacrifice",
              "target": {
                "type": "SelfRef"
              },
              "count": {
                "type": "Fixed",
                "value": 1
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "uses_tracked_set": false
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": null,
      "destination": "Battlefield",
      "trigger_zones": [],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "You may cast this spell as though it had flash. If you cast it any time a sorcery couldn't have been cast, the controller of the permanent it becomes sacrifices it at the beginning of the next cleanup step.",
      "constraint": null,
      "condition": {
        "type": "CastTimingPermission",
        "permission": "AsThoughHadFlash"
      },
      "batched": false
    }
  ],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": null,
        "properties": [
          {
            "type": "EnchantedBy"
          }
        ]
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 2
        },
        {
          "type": "AddToughness",
          "value": 2
        }
      ],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Enchanted creature gets +2/+2."
    }
  ],
  "replacements": [],
  "extractedKeywords": [],
  "castingOptions": [
    {
      "kind": "AsThoughHadFlash"
    }
  ]
}
