crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__arni_brokenbrow_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 5,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Haste"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "category": "Unknown",
            "fragment": "Haste",
            "description": "Haste"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 6,
          "end_byte": 200,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Boast — {1}: You may change Arni's base power to 1 plus the greatest power among other creatures you control until end of turn. (Activate only if ~ attacked this turn and only once each turn.)"
      },
      "node": {
        "Spell": {
          "source_text": "You may change Arni's base power to 1 plus the greatest power among other creatures you control until end of turn",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 113,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "You may change Arni's base power to 1 plus the greatest power among other creatures you control until end of turn"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Unimplemented",
                    "name": "unrecognized_clause_head",
                    "description": "change Arni's base power to 1 plus the greatest power among other creatures you control"
                  },
                  "duration": "UntilEndOfTurn",
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": true,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [],
                "generic": 1
              }
            },
            "activation_restrictions": [
              {
                "type": "OnlyOnceEachTurn"
              },
              {
                "type": "RequiresCondition",
                "data": {
                  "condition": {
                    "type": "SourceAttackedThisTurn"
                  }
                }
              }
            ],
            "ability_tag": {
              "type": "Boast"
            },
            "description": "Boast — {1}: You may change Arni's base power to 1 plus the greatest power among other creatures you control until end of turn.",
            "stages": [
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "Haste\nBoast — {1}: You may change Arni's base power to 1 plus the greatest power among other creatures you control until end of turn. (Activate only if this creature attacked this turn and only once each turn.)",
  "card_name": "Arni Brokenbrow"
}
