crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__barbarian_class_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 55,
          "end_byte": 155,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "If you would roll one or more dice, instead roll that many dice plus one and ignore the lowest roll."
      },
      "node": {
        "Replacement": {
          "definition": {
            "event": "RollDice",
            "execute": {
              "kind": "Spell",
              "effect": {
                "type": "RollDie",
                "count": {
                  "type": "Offset",
                  "inner": {
                    "type": "Ref",
                    "qty": {
                      "type": "EventContextAmount"
                    }
                  },
                  "offset": 1
                },
                "sides": 0,
                "results": []
              },
              "cost": null,
              "sub_ability": null,
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": null,
              "optional_targeting": false,
              "optional": false,
              "forward_result": false
            },
            "mode": {
              "type": "Mandatory"
            },
            "valid_card": null,
            "description": "If you would roll one or more dice, instead roll that many dice plus one and ignore the lowest roll.",
            "condition": null,
            "die_ignore_rule": {
              "type": "Lowest"
            },
            "valid_player": "You"
          },
          "source_text": "If you would roll one or more dice, instead roll that many dice plus one and ignore the lowest roll.",
          "execute_ir": null
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 156,
          "end_byte": 171,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{1}{R}: Level 2"
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "SetClassLevel",
            "level": 2
          },
          "cost": {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Red"
              ],
              "generic": 1
            }
          },
          "sub_ability": null,
          "duration": null,
          "description": "{1}{R}: Level 2",
          "target_prompt": null,
          "activation_restrictions": [
            {
              "type": "AsSorcery"
            },
            {
              "type": "ClassLevelIs",
              "data": {
                "level": 1
              }
            }
          ],
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 3,
          "last_line": 3,
          "start_byte": 172,
          "end_byte": 282,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever you roll one or more dice, target creature you control gets +2/+0 and gains menace until end of turn."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "RolledDie",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "GenericEffect",
              "static_abilities": [
                {
                  "mode": "Continuous",
                  "affected": {
                    "type": "ParentTarget"
                  },
                  "modifications": [
                    {
                      "type": "AddPower",
                      "value": 2
                    },
                    {
                      "type": "AddToughness",
                      "value": 0
                    },
                    {
                      "type": "AddKeyword",
                      "keyword": "Menace"
                    }
                  ],
                  "condition": null,
                  "affected_zone": null,
                  "effect_zone": null,
                  "active_zones": [],
                  "characteristic_defining": false,
                  "description": "get +2/+0 and gains menace"
                }
              ],
              "duration": "UntilEndOfTurn",
              "target": {
                "type": "Typed",
                "type_filters": [
                  "Creature"
                ],
                "controller": "You",
                "properties": []
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": "UntilEndOfTurn",
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": null,
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": {
            "type": "Controller"
          },
          "valid_source": null,
          "description": "Whenever you roll one or more dice, target creature you control gets +2/+0 and gains menace until end of turn.",
          "constraint": null,
          "condition": {
            "type": "ClassLevelGE",
            "level": 2
          },
          "batched": true
        }
      }
    },
    {
      "id": 3,
      "source": {
        "id": {
          "item": 3,
          "ordinal": 0
        },
        "span": {
          "first_line": 4,
          "last_line": 4,
          "start_byte": 283,
          "end_byte": 298,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{2}{R}: Level 3"
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "SetClassLevel",
            "level": 3
          },
          "cost": {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Red"
              ],
              "generic": 2
            }
          },
          "sub_ability": null,
          "duration": null,
          "description": "{2}{R}: Level 3",
          "target_prompt": null,
          "activation_restrictions": [
            {
              "type": "AsSorcery"
            },
            {
              "type": "ClassLevelIs",
              "data": {
                "level": 2
              }
            }
          ],
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        }
      }
    },
    {
      "id": 4,
      "source": {
        "id": {
          "item": 4,
          "ordinal": 0
        },
        "span": {
          "first_line": 5,
          "last_line": 5,
          "start_byte": 299,
          "end_byte": 332,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Creatures you control have haste."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": "You",
              "properties": []
            },
            "modifications": [
              {
                "type": "AddKeyword",
                "keyword": "Haste"
              }
            ],
            "condition": {
              "type": "ClassLevelGE",
              "level": 3
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "Creatures you control have haste."
          },
          "source_text": "Creatures you control have haste.",
          "body_ir": null
        }
      }
    }
  ],
  "source_text": "(Gain the next level as a sorcery to add its ability.)\nIf you would roll one or more dice, instead roll that many dice plus one and ignore the lowest roll.\n{1}{R}: Level 2\nWhenever you roll one or more dice, target creature you control gets +2/+0 and gains menace until end of turn.\n{2}{R}: Level 3\nCreatures you control have haste.",
  "card_name": "Barbarian Class"
}
